--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,8 @@
     --secondary-background-color: #2F303A;
     --primary-title-color: #212121;
     --primary-text-color: #757575;
+    --icon-fill: #afb1b8;
+    --footer-icon-fill: #ffffff;
 }
 
 h1, h2, h3, p, ul {
@@ -51,7 +53,7 @@ body {
 
 .header {
     border-bottom: 1px solid #ececec;
-    padding: 24px 0 24px 0;
+    padding: 24px 0 25px 0;
 }
 .head-container {
     display: flex;
@@ -105,7 +107,6 @@ margin-left: 50px;
 
 .header-contact-icon {
     fill:currentColor;
-    align-self: center;
 }
 
 .container-contacts {
@@ -188,12 +189,18 @@ margin-left: 50px;
 
 .mailt:focus, .mailt:hover,
 .adress:focus, .adress:hover {
-color: var(--accent-color);
+    color: var(--accent-color);
 }
 
 .hero {
-    background-color: var(--secondary-background-color);
+   background-color: var(--secondary-background-color);
    padding: 200px 0px;
+   max-width: 1600px;
+   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+   url(../images/hero.jpg);
+   background-repeat: no-repeat;
+   background-position: center; 
+   background-size: cover;
 }
 
 .pluses {
@@ -260,7 +267,23 @@ color: var(--accent-color);
 margin-right: 0;
 }
 
+.pluses-icon {
+    margin-bottom: 30px;
+    height: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+    background-color:#F5F4FA;
+    border-radius: 4px;
+}
+
+.icon {
+    width: 70px;
+    height: 70px;
+}
+
 .pluses-title {
+    text-align: start;
     margin-bottom: 10px;
     font: weight 700;
     font-size: 14px;
@@ -325,6 +348,36 @@ margin-right: 0;
 .thumb-team {
     padding-top: 30px;
     padding-bottom: 30px;
+}
+
+.team-soc-list,
+.clients-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.team-soc-item {
+    width: 44px;
+    height: 44px;
+}
+
+.team-soc-link,
+.clients-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    fill: var(--icon-fill);
+}
+
+.team-soc-link:hover,
+.team-soc-link:focus {
+    background-color: var(--accent-color);
+    fill: #ffffff
 }
 
 .team-item .team-list:last-child {
