--- a/css/styles.css
+++ b/css/styles.css
@@ -525,6 +525,8 @@ margin-right: 0;
 .filter-btn:hover {
     background-color: var(--accent-color);
     color: var(--primary-background-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .works {
@@ -532,6 +534,18 @@ display: flex;
 flex-wrap: wrap;
 padding-left: 0;
 padding-right: 0;
+}
+
+.portfolio-link {
+    display: block;
+    margin: 0;
+    text-decoration: none;
+}
+
+.portfolio-link:hover,
+.portfolio-link:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .works .work-list {
