--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,12 @@ body {
     padding-bottom: 94px;
 }
 
+img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
 .section-title {
     margin-bottom: 50px;
     color: var(--primary-title-color);
@@ -270,6 +276,7 @@ margin-left: 50px;
    background-repeat: no-repeat;
    background-position: center; 
    background-size: cover;
+   margin: 0 auto;
 }
 
 .pluses {
@@ -439,13 +446,13 @@ margin-right: 0;
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    fill: var(--icon-fill);
+    color: var(--icon-fill);
 }
 
 .team-soc-link:hover,
 .team-soc-link:focus {
     background-color: var(--accent-color);
-    fill: #ffffff
+    color: #ffffff;
 }
 
 .team-item .team-list:last-child {
@@ -458,6 +465,10 @@ margin-right: 0;
 }
 .team {
     background-color: #F5F4FA;
+}
+
+.team-soc-icon {
+    fill: currentColor;
 }
 
 .clients-list {
